# OpenGLThings

./: .gitignore  BasicTraingle.c  CMakeLists.txt  Shaders.c  Shaders.h  Window.c  Window.h  main.c
Engine/: Camera.c  (+31 more)
Examples/: 10_SpecularMaps.c  10_SpecularMaps.h  Basic3D.c  Basic3D.h  BasicTriangle.c  BasicTriangle.h  CMakeLists.txt  CameraExample.c  CameraExample.h  LightingExample.c  LightingExample.h  ModelLoadingExample.c  ModelLoadingExample.h  ShaderColour.c  ShaderColour.h  TextureExample.c  TextureExample.h  _template.txt
Examples/1 - Triangle/: BasicTriangle.c  BasicTriangle.h
Examples/10 - Stencil Buffer/: StencilBuffer.c  StencilBuffer.h  default.fs  default.vs  outlining.vs
Examples/11 - Face Culling/: FaceCulling.c  FaceCulling.h  default.fs  default.vs
Examples/12 - Transparancy/: Transparancy.c  Transparancy.h  default.fs  default.vs  grass.fs  windows.fs
Examples/13 - Framebuffer Post Process/: FrameProcess.c  FrameProcess.h  default.fs  default.vs  framebuffer.fs
Examples/14 - Cubemaps & Skyboxes/: CubeBoxes.c  CubeBoxes.h  default.vs
Examples/15 - Geometry Shader/: Geometry.c  default.fs  default.vs  normals.fs
Examples/16 - Instancing/: Instancing.c  Instancing.h  asteroid.vs  default.fs  skybox.vs
Examples/17 - Anti-Aliasing/: AntiAliasing.c  AntiAliasing.h  default.fs
Examples/18 - Blinn-Phong/: BlinnPhong.c  BlinnPhong.h  default.fs  default.vs
Examples/19 - Gamma/: Gamma.c  Gamma.h  default.fs
Examples/2 - Shaders/: ShaderColour.c  ShaderColour.h  coloured_triangle.vs
Examples/20 - UBO Example/: UBOExample.c  UBOExample.h  red.fs
Examples/21 - Shadow Maps (Directional Lighting Cubes)/: SM_With_Cubes.c  SM_With_Cubes.h  cube_shader.fs  cube_shader.vs  plane_shader.vs
Examples/21 - Shadow Maps (Directional Lighting Model)/: SM_With_Model.c  SM_With_Model.h  default.fs  shadowMap.vs
Examples/21 - Shadow Maps DL/: SM_With_Cubes.c  ShadowMapsDL.c  ShadowMapsDL.h  cube_shader.vs  default.fs  default.vs  framebuffer.fs  plane_shader.fs  shadowMap.fs  shadowMap.vs
Examples/22 - Shadow Maps (Spotlights & Point Lights)/: SM_With_SP_PL.c  SM_With_SP_PL.h  default.fs  default.vs  shadowCubeMap.fs
Examples/23 - Normal Maps/: Normal_Maps.c  Normal_Maps.h  default.vs  texture_example.fs  texture_example.vs
Examples/24 - Parallax Occlusion Mapping/: Parallax_Mapping.c  Parallax_Mapping.h  default.fs  default.vs
Examples/25 - HDR/: HDR.c  HDR.h  default.fs
Examples/26 - Bloom/: Bloom.c  blur.fs  default.fs  default.gs  default.vs  framebuffer.fs  framebuffer.vs
Examples/26 -Bloom/: Bloom.h
Examples/27 - Procedural/: Procedural.c  Procedural.h  plane.comp  plane.vs
Examples/28 - Compute Shaders/: Compute.c  Compute.h  screen.comp  screen.fs  screen.vs
Examples/29 - Deferred Shading/: Deferred.c  Deferred.h  GBuffer.c  GBuffer.h  deferred_light_box.vs  deferred_shading.fs  g_buffer.vs
Examples/3 - Textures/: TextureExample.c  TextureExample.h  texture_example.fs  texture_example.vs
Examples/30 - Orthographic Drawing/: Ortho.c  Ortho.h  orthoshader.fs  orthoshader.vs
Examples/31 - Mesh/: Mesh_Test.c  Mesh_Test.h
Examples/32 - Breakout/: Ball.c  Ball.h  Breakout.c  Breakout.h  Bricks.c  Bricks.h  Collisions.c  Collisions.h  Paddle.c  Paddle.h  default.vs
Examples/33 - Text Rendering/: Text.c  Text.h  TextRendering.c  TextRendering.h  cube.fs  cube.vs  text2D.fs  text2D.vs
Examples/4 - Basic 3D/: Basic3D.c  basic_3D.vs
Examples/5 - Camera/: CameraExample.c  CameraExample.h  camera_example.fs  camera_example.vs
Examples/6 - Lighting/: LightingExample.c  LightingExample.h  default.fs
Examples/7 - Specular Maps/: SpecularMaps.c  SpecularMaps.h  default.fs  default.vs  lights.vs
Examples/8 - Model Loading/: ModelLoadingExample.c  default.vs
(+95 files in other folders)
